<resources>
    <string name="app_name">MaterialDesignApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_light">Light Activity</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="button_hide">Hide</string>
    <string name="button_reveal">Reveal</string>
    <string name="button_explode_transition">Explode Transition</string>
    <string name="button_shared_transition">Shared Transition</string>
</resources>
